@@ -31,7 +31,7 @@
             <li><%= link_to 'Overview',  :controller => '/admin/overview' %></li>
             <li><%= link_to 'Articles',  :controller => '/admin/articles' %></li>
             <li><%= link_to 'Assets',    :controller => '/admin/assets' %></li>
-          <% Mephisto::Admin.tabs.each do |tab| -%>
+          <% Mephisto::Plugin.tabs.each do |tab| -%>
             <li><%= link_to tab.first, tab.last %></li>
           <% end -%>
           </ul>
@@ -40,6 +40,10 @@
             <li><%= link_to 'Sections', :controller => '/admin/sections' %></li>
             <li><%= link_to 'Design',   :controller => '/admin/design' %></li>
             <li><%= link_to "Users",    :controller => "users" %></li>
+            <li><%= link_to 'Plugins',  :controller => '/admin/plugins' %></li>
+          <% Mephisto::Plugin.admin_tabs.each do |tab| -%>
+            <li><%= link_to tab.first, tab.last %></li>
+          <% end -%>
           </ul>
           <% end -%>
         <% end -%>
