@@ -2,7 +2,7 @@
 # migrations feature of ActiveRecord to incrementally modify your database, and
 # then regenerate this schema definition.
 
-ActiveRecord::Schema.define(:version => 67) do
+ActiveRecord::Schema.define(:version => 68) do
 
   create_table "assets", :force => true do |t|
     t.column "content_type",     :string
@@ -80,8 +80,8 @@ ActiveRecord::Schema.define(:version => 67) do
     t.column "author_email",   :string
     t.column "author_ip",      :string,   :limit => 100
     t.column "comments_count", :integer,                 :default => 0
-    t.column "version",        :integer
     t.column "updater_id",     :integer
+    t.column "version",        :integer
     t.column "site_id",        :integer
     t.column "approved",       :boolean,                 :default => false
     t.column "comment_age",    :integer,                 :default => 0
@@ -92,11 +92,11 @@ ActiveRecord::Schema.define(:version => 67) do
 
   create_table "events", :force => true do |t|
     t.column "mode",       :string
+    t.column "user_id",    :integer
     t.column "article_id", :integer
     t.column "title",      :text
     t.column "body",       :text
     t.column "created_at", :datetime
-    t.column "user_id",    :integer
     t.column "author",     :string,   :limit => 100
     t.column "comment_id", :integer
     t.column "site_id",    :integer
@@ -107,6 +107,12 @@ ActiveRecord::Schema.define(:version => 67) do
     t.column "user_id",    :integer
     t.column "created_at", :datetime
     t.column "admin",      :boolean,  :default => false
+  end
+
+  create_table "mephisto_plugins", :force => true do |t|
+    t.column "name",    :string
+    t.column "options", :text
+    t.column "type",    :string
   end
 
   create_table "sections", :force => true do |t|
